# exponential-idle-arrow-puzzle-solver

./: .coverage  .coveragerc  .pre-commit-config.yaml  CLAUDE-JP.md  CLAUDE.md  DEVELOPMENT_LOG.md  KNOWN_ISSUES-JP.md  KNOWN_ISSUES.md  README-JP.md  README.md  pyproject.toml  setup.cfg
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  complexity_analyzer.py  memory_profiler.py  performance_test.py  run_benchmarks.py
devlog/: 2025-01-22_vision_implementation.md  2025-06-22.md  README.md
src/arrow_puzzle_solver/: __init__.py  __main__.py  automation.py  board.py  cli.py  solver.py  vision.py
src/puzzle_solver/: __init__.py  __main__.py  automation.py  cli.py
src/puzzle_solver/core/: __init__.py  base_board.py  base_solver.py  base_vision.py
src/puzzle_solver/puzzles/: __init__.py
src/puzzle_solver/puzzles/arrow/: __init__.py  board.py  solver.py  vision.py
src/puzzle_solver/puzzles/fifteen/: __init__.py  board.py  solver.py  vision.py
tests/: __init__.py  test_arrow_board.py  test_arrow_board_edge_cases.py  test_arrow_solver.py  test_arrow_solver_advanced.py  test_arrow_vision.py  test_base_classes.py  test_board.py  test_fifteen_board.py  test_fifteen_solver.py  test_fifteen_vision.py  test_main.py  test_puzzle_registry.py  test_solver.py
