[project]
name = "puzzle-solver"
version = "0.2.0"
description = "A multi-puzzle solver framework supporting arrow puzzles, 15-puzzle, and more"
authors = [
    { name = "pyonkichi499", email = "hrs499944@gmail.com" }
]
dependencies = [
    "numpy>=1.24.0",
    "click>=8.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "pyautogui>=0.9.54",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/puzzle_solver"]
